--- a/src/style.css
+++ b/src/style.css
@@ -157,3 +157,27 @@ nav {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
 }
+
+/* PopUp */
+
+.popup-box {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box {
+  position: relative;
+  width: 40%;
+  max-height: 70vh;
+  background: #fff;
+  border-radius: 5px;
+  border: 1px solid #999;
+  overflow: auto;
+}
